# vectornav

./: .pre-commit-config.yaml  1-local.list  CMakeLists.txt  Packages  README.md  Release  local.yaml  package.xml  ros-noetic-vectornav-driver_0-2023.07.15.17.53_amd64-2023-07-15T17:53:04Z.build  ros-noetic-vectornav-driver_0-2023.07.15.17.53_amd64.build  ros-noetic-vectornav-driver_0-2023.07.15.17.53_amd64.buildinfo  ros-noetic-vectornav-driver_0-2023.07.15.17.53_amd64.changes  ros-noetic-vectornav-driver_0-2023.07.15.17.53_amd64.deb  ros-noetic-vectornav-driver_0-2024.02.29.12.40_amd64-2024-02-29T12:40:08Z.build  ros-noetic-vectornav-driver_0-2024.02.29.12.40_amd64.build  ros-noetic-vectornav-driver_0-2024.02.29.12.40_amd64.buildinfo  ros-noetic-vectornav-driver_0-2024.02.29.12.40_amd64.changes  ros-noetic-vectornav-driver_0-2024.02.29.12.40_amd64.deb  ros-noetic-vectornav-driver_0-2025.05.19.15.25_amd64-2025-05-19T15:25:55Z.build  ros-noetic-vectornav-driver_0-2025.05.19.15.25_amd64.build  ros-noetic-vectornav-driver_0-2025.05.19.15.25_amd64.buildinfo  ros-noetic-vectornav-driver_0-2025.05.19.15.25_amd64.changes  ros-noetic-vectornav-driver_0-2025.05.19.15.25_amd64.deb
.github/workflows/: build_noetic.yaml  build_ros.yaml  format.yaml
config/: vn100_params.yaml  vn100_params2.yaml
include/vectornav/: async_callback_wrapper.hpp  config.hpp  supported_sets.hpp  vectornav.hpp
launch/: vectornav.launch
src/: vectornav.cpp  vectornav_node.cpp
udev/: 99-vn100.rules
vectornav_driver/: CMakeLists.txt  package.xml
vectornav_driver/config/: vn100_params.yaml  vn100_params_ros1.yaml  vn100_params_ros2.yaml
vectornav_driver/include/vectornav_driver/: ros_interface.hpp  utils.hpp  vectornav_driver.hpp
vectornav_driver/launch/: vectornav_driver.launch  vectornav_driver.launch.py  vectornav_driver_ros1.launch  vectornav_driver_ros2.py
vectornav_driver/src/: vectornav_driver.cpp  vectornav_driver_node.cpp
vectornav_driver/udev/: 99-vn100.rules
vectornav_driver/vnproglib/cpp/: CMakeLists.txt
vectornav_driver/vnproglib/cpp/src/: sensors.cpp  serialport.cpp
vectornav_driver/vnproglib/help/: index.html
vectornav_driver/vnproglib/help/search/: all_0.js
vnproglib/cpp/: CMakeLists.txt
vnproglib/help/search/: searchdata.js
