<?xml version="1.0"?>
<package format="3">
  <name>vectornav_driver</name>
  <version>1.0.0</version>
  <description>A driver for VectorNav IMUs supporting both ROS1 and ROS2</description>

  <maintainer email="nikhil.v.khedekar@ntnu.no">Nikhil Khedekar</maintainer>
  <maintainer email="morten.nissov@ntnu.no">Morten Nissov</maintainer>

  <license>BSD</license>

  <!-- ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>

  <!-- ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <!-- Common dependencies -->
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>spdlog</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
